--- a/omnibus/Gemfile
+++ b/omnibus/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
-gem "omnibus", git: "https://github.com/chef/omnibus.git"
+gem "omnibus", git: "https://github.com/chef/omnibus.git", branch: "shain/selective_fakeroot"
 gem "omnibus-software", git: "https://github.com/chef/omnibus-software.git"
 
 # pedump pessimistically pins multipart-post to a version from 2013 which makes
