--- a/omnibus/Gemfile
+++ b/omnibus/Gemfile
@@ -1,7 +1,7 @@
 source "https://rubygems.org"
 
-gem "omnibus", github: "chef/omnibus", branch: "ksubrama/gcc_investigate"
-gem "omnibus-software", github: "chef/omnibus-software", branch: "ksubrama/ruby23"
+gem "omnibus", github: "chef/omnibus", branch: "shain/solaris_10_refresh"
+gem "omnibus-software", github: "chef/omnibus-software", branch: "shain/solaris_10_refresh"
 
 # pedump pessimistically pins multipart-post to a version from 2013 which makes
 # bundler very unhappy. Remove this when upstream has merged zed-0xff/pedump#6 .
