update mixlib-install to 2.0.2

--- a/acceptance/Gemfile
+++ b/acceptance/Gemfile
@@ -13,4 +13,4 @@ gem "winrm-elevated"
 gem "berkshelf", "4.3.5"
 
 # until 2.0.0 is fixed for unstable packages
-gem "mixlib-install", "1.2.3"
+gem "mixlib-install", "~> 2.0"
